<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android.support.v7.cardview="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:id="@+id/pass_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android.support.v7.cardview:cardMaxElevation="@dimen/card_longclick_elevation_half"
            android:orientation="vertical">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/pass_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="horizontal">

                    <LinearLayout
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"

                            android:orientation="vertical">

                        <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:paddingRight="4dp"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="?android:textColorSecondary"
                                tools:text="12.10.2013 17:00"/>

                        <EditText
                                android:id="@+id/passTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="4dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                tools:text="Title"
                                android:inputType="text"
                                android:importantForAutofill="no" />

                    </LinearLayout>

                    <org.ligi.passandroid.ui.views.CategoryIndicatorViewWithIcon
                            android:id="@+id/categoryView"
                            android:layout_width="48dp"
                            android:layout_height="74dp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>
                </LinearLayout>


                <View
                        android:id="@+id/actionsSeparator"
                        android:layout_width="match_parent"
                        android:layout_height="2dip"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#dfdfdf"
                        android:padding="7dp"/>

                <org.ligi.passandroid.ui.views.TimeAndNavBar
                        android:id="@+id/timeAndNavBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:id="@+id/passExtrasContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <ImageView
                            android:id="@+id/strip_img"
                            android:scaleType="fitXY"
                            tools:src="@drawable/ic_launcher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            tools:ignore="ContentDescription"
                            android:padding="8dp"/>


                    <Button
                            android:id="@+id/add_strip"
                            android:text="@string/add_header_image"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <FrameLayout
                            android:id="@+id/container_for_primary_fields"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    />

                    <include layout="@layout/barcode"/>

                    <Button
                            android:id="@+id/add_barcode_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/add_barcode"
                    />

                    <FrameLayout
                            android:id="@+id/container_for_secondary_fields"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    />


                    <ImageView
                            android:id="@+id/logo_img"
                            android:scaleType="fitXY"
                            tools:src="@drawable/ic_launcher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            tools:ignore="ContentDescription"
                            android:padding="8dp"/>

                    <Button
                            android:id="@+id/add_logo"
                            android:text="@string/add_logo_image"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_height="wrap_content"/>

                    <ImageView
                            android:id="@+id/footer_img"
                            android:scaleType="fitXY"
                            tools:src="@drawable/ic_launcher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            tools:ignore="ContentDescription"
                            android:padding="8dp"/>


                    <Button
                            android:id="@+id/add_footer"
                            android:text="@string/add_footer_image"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>


</LinearLayout>